--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,10 +3,13 @@
 @import './var';
 @import './animation';
 
+@import './home';
 @import './Header';
 @import './footer';
+@import './service';
 @import './Slideshow';
 @import './login';
 @import './products';
 @import './userInfo';
 @import './patient';
+@import './item';
