--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import './home';
 @import './Header';
 @import './footer';
+@import './contact';
 @import './service';
 @import './Slideshow';
 @import './login';
