--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -57,6 +57,8 @@
             & .nav-link {
                 padding: 3rem 2rem !important;
                 color: $white;
+                cursor: pointer;
+                user-select: none;
             }
 
             &:hover {
