--- a/src/style.css
+++ b/src/style.css
@@ -285,7 +285,9 @@ html {
       border-radius: 1rem; }
       .navbar-nav .nav-item .nav-link {
         padding: 3rem 2rem !important;
-        color: white; }
+        color: white;
+        cursor: pointer;
+        user-select: none; }
       .navbar-nav .nav-item:hover {
         background-color: white;
         transition: all .3s; }
@@ -335,9 +337,86 @@ footer {
   footer .text-zone {
     padding-bottom: 5px; }
 
+.mainContact {
+  margin: 50px 0; }
+  .mainContact .HeadText {
+    text-align: center;
+    padding-bottom: 10px;
+    border-bottom: thin solid #861818; }
+    .mainContact .HeadText h2 {
+      font-size: 2.5rem;
+      color: #861818; }
+  .mainContact .mainPicture {
+    display: flex;
+    justify-content: center; }
+    .mainContact .mainPicture img {
+      width: 30%; }
+  .mainContact .mainContent {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px 0 30px 0;
+    border-radius: 5px;
+    background-color: #861818;
+    color: white;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1); }
+    .mainContact .mainContent .firstContent {
+      text-align: start;
+      padding: 20px 5%;
+      font-size: 1.4rem;
+      height: auto;
+      width: 100%;
+      border-right: thin solid white; }
+      .mainContact .mainContent .firstContent p {
+        margin-bottom: 20px; }
+      .mainContact .mainContent .firstContent .icon-zone a {
+        margin-right: 20px;
+        cursor: pointer; }
+        .mainContact .mainContent .firstContent .icon-zone a .brandIcon {
+          font-size: 2rem;
+          color: white;
+          transition: all .2s; }
+        .mainContact .mainContent .firstContent .icon-zone a:hover .brandIcon {
+          transform: scale(1.3) translateY(-2px);
+          transition: all .2s; }
+    .mainContact .mainContent .secondContent {
+      text-align: start;
+      padding: 20px 8%;
+      height: auto;
+      width: 50%;
+      font-size: 1rem; }
+      .mainContact .mainContent .secondContent span {
+        margin-left: 8px; }
+  .mainContact .mapBtn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px; }
+    .mainContact .mapBtn .btn {
+      margin: 0 5px; }
+  .mainContact .mapContainer {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%; }
+    .mainContact .mapContainer #map2 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: -1;
+      opacity: 0;
+      transition: all .5s; }
+    .mainContact .mapContainer .active {
+      opacity: 1 !important;
+      z-index: 1 !important;
+      transition: all .5s; }
+
+.map {
+  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.1); }
+
 .mainServiceContainer {
   margin: 20px 0;
-  padding: 20px !important; }
+  padding: 5px !important;
+  width: 100%; }
   .mainServiceContainer .HeadText {
     font-size: 3.5rem;
     border-bottom: thin solid rgba(0, 0, 0, 0.1);
@@ -363,12 +442,13 @@ footer {
       opacity: 0;
       transition: all .3s ease-out; }
     .mainServiceContainer .first .firstText {
+      text-align: center;
       position: absolute;
       bottom: 0;
       right: 0;
       background-color: #a74242;
       height: 50%;
-      width: 70%;
+      width: 100%;
       padding: 10px 30px;
       border-radius: 5px;
       color: white;
@@ -381,8 +461,7 @@ footer {
       transition: all .3s ease-out; }
     .mainServiceContainer .first:hover .firstText {
       bottom: 50%;
-      right: 2%;
-      width: 50%;
+      width: 100%;
       opacity: 1;
       z-index: 1;
       transition: all .3s ease-out; }
