--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -3,7 +3,7 @@
     & .HeadText{
         text-align: center;
         padding-bottom: 10px;
-        border-bottom: thin solid $color-1;
+        border-bottom: thin solid rgba(0,0,0,0.1);
         & h2{
             font-size: 2.5rem;
             color: $color-1;
