--- a/src/scss/_userInfo.scss
+++ b/src/scss/_userInfo.scss
@@ -1,41 +1,87 @@
-.userInfo-container {
-    min-height: 60vh;
+.userInfo-container{
+    min-height: 65vh;   
 
-    & .row{
-        text-align: center;
-
-        &-1 {
-            .img-content {
-                margin: 5rem 0;
-
-                img{
-                    border-radius: 50%;
-                    height: 50vh;
-                    padding: 2rem;
-                    background-color: $color-1;
-                }
-            }
-
-            .text-content {
-                font-size: 1.8rem;
+    & .hidden{
+        opacity: 0;
+        transition: all .4s ease-out;
+    }
+    & .sideBar-userInfo{
+        background-color: $color-2;
+        min-height: 65vh;
+        padding-top: 20px;
+        transition: all .4s ease-out;
+        & .img-content{
+            display: flex;
+            justify-content: center;
+            
+            & img{
+                width: 50% ;
+                height: 10%;
+                border-radius: 50%;
             }
         }
 
-        &-2 {
-            margin: 5rem 0;
-            .icon{
-                font-size: 3.5rem;
-                color: $white;
-                padding: 2rem;
-                margin: 0 2rem;
-                background-color: $color-1;
-                border-radius: 50%;
+        & .text-content{
+            text-align: center;
+            margin: 30px 0 10px 0;
+            color: white;
 
-                &:hover {
-                    background-color: black;
-                    transition: all 1s;
+            & .text{
+                font-size: 1.6rem;
+            }
+        }
+
+        
+    }
+
+    & .tableInfo{
+        & .userInfo-icon{
+            display: flex;
+            justify-content: space-between;
+            box-shadow: 0 2px 3px 2px rgba(0,0,0,0.1);
+            margin: 20px 10px 10px 10px;
+            padding: 10px;
+            font-size: 2rem;
+            & .icon{
+                transition: all .4s ease-out;
+                & a{
+                    color: $color-1;
                 }
             }
+            & .text{
+                color: $color-1;
+                letter-spacing: 0.1rem;
+            }
+            & .active{
+                transform: rotate(180deg);
+                transition: all .4s ease-out;
+            }
+        }
+        & .PatientContainer{
+            padding: 0 30px 0 30px;
         }
     }
+
+    
+    
+}
+
+.width-0{
+    width: 0%;
+    transition: all .4s ease-out;
+}
+
+.width-20{
+    width: 20%;
+    transition: all .4s ease-out;
+}
+
+.width-80{
+    width: 80%;
+    transition: all .4s ease-out;
+}
+
+.width-100{
+    width: 100%;
+    transition: all .4s ease-out;
 }
