--- a/src/style.css
+++ b/src/style.css
@@ -342,7 +342,7 @@ footer {
   .mainContact .HeadText {
     text-align: center;
     padding-bottom: 10px;
-    border-bottom: thin solid #861818; }
+    border-bottom: thin solid rgba(0, 0, 0, 0.1); }
     .mainContact .HeadText h2 {
       font-size: 2.5rem;
       color: #861818; }
@@ -612,7 +612,6 @@ footer {
           font-weight: bold; }
           .contain-login .contain .overlay-form .button-group button:hover {
             transition: all .5s;
-            color: #861818;
             background-color: #a74242;
             box-shadow: 0 0 2px 1px #a74242; }
       .contain-login .contain .overlay-form .textSignin {
@@ -692,30 +691,63 @@ footer {
         transition: all .6s ease-out; }
 
 .userInfo-container {
-  min-height: 60vh; }
-  .userInfo-container .row {
-    text-align: center; }
-    .userInfo-container .row-1 .img-content {
-      margin: 5rem 0; }
-      .userInfo-container .row-1 .img-content img {
-        border-radius: 50%;
-        height: 50vh;
-        padding: 2rem;
-        background-color: #861818; }
-    .userInfo-container .row-1 .text-content {
-      font-size: 1.8rem; }
-    .userInfo-container .row-2 {
-      margin: 5rem 0; }
-      .userInfo-container .row-2 .icon {
-        font-size: 3.5rem;
-        color: white;
-        padding: 2rem;
-        margin: 0 2rem;
-        background-color: #861818;
+  min-height: 65vh; }
+  .userInfo-container .hidden {
+    opacity: 0;
+    transition: all .4s ease-out; }
+  .userInfo-container .sideBar-userInfo {
+    background-color: #a74242;
+    min-height: 65vh;
+    padding-top: 20px;
+    transition: all .4s ease-out; }
+    .userInfo-container .sideBar-userInfo .img-content {
+      display: flex;
+      justify-content: center; }
+      .userInfo-container .sideBar-userInfo .img-content img {
+        width: 50%;
+        height: 10%;
         border-radius: 50%; }
-        .userInfo-container .row-2 .icon:hover {
-          background-color: black;
-          transition: all 1s; }
+    .userInfo-container .sideBar-userInfo .text-content {
+      text-align: center;
+      margin: 30px 0 10px 0;
+      color: white; }
+      .userInfo-container .sideBar-userInfo .text-content .text {
+        font-size: 1.6rem; }
+  .userInfo-container .tableInfo .userInfo-icon {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.1);
+    margin: 20px 10px 10px 10px;
+    padding: 10px;
+    font-size: 2rem; }
+    .userInfo-container .tableInfo .userInfo-icon .icon {
+      transition: all .4s ease-out; }
+      .userInfo-container .tableInfo .userInfo-icon .icon a {
+        color: #861818; }
+    .userInfo-container .tableInfo .userInfo-icon .text {
+      color: #861818;
+      letter-spacing: 0.1rem; }
+    .userInfo-container .tableInfo .userInfo-icon .active {
+      transform: rotate(180deg);
+      transition: all .4s ease-out; }
+  .userInfo-container .tableInfo .PatientContainer {
+    padding: 0 30px 0 30px; }
+
+.width-0 {
+  width: 0%;
+  transition: all .4s ease-out; }
+
+.width-20 {
+  width: 20%;
+  transition: all .4s ease-out; }
+
+.width-80 {
+  width: 80%;
+  transition: all .4s ease-out; }
+
+.width-100 {
+  width: 100%;
+  transition: all .4s ease-out; }
 
 .patientlist-table {
   min-height: 100vh; }
@@ -729,27 +761,96 @@ footer {
   color: white;
   font-weight: bold;
   padding: 5px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  background-color: #861818;
+  border-left: thin solid white; }
 
-.col {
-  font-size: 16px; }
+.tableDetail {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-bottom: thin solid white;
+  border-left: thin solid white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 1.4rem;
+  position: relative; }
+  .tableDetail a {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: all .2s ease-out; }
+    .tableDetail a:hover {
+      text-decoration: none;
+      color: #861818;
+      transition: all .2s ease-out; }
 
-.row-highlight {
-  font-size: 16px;
+.headHighlight {
+  font-size: 1.6rem;
   font-weight: bold;
   color: white;
   background-color: #861818;
-  padding-left: 15px; }
+  padding-left: 15px;
+  width: 100% !important; }
+
+.registerData-container {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  font-size: 1.4rem;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.1);
+  min-height: 570px; }
+  .registerData-container .detail {
+    padding: 10px;
+    width: 90%;
+    margin-left: 50%;
+    transform: translateX(-50%); }
+    .registerData-container .detail .textContain {
+      background-color: whitesmoke;
+      margin-bottom: 5px !important;
+      padding: 5px 0 !important; }
+    .registerData-container .detail .head {
+      font-weight: bold; }
+  .registerData-container #qr-img {
+    width: 30%; }
+
+.Measured-container {
+  margin-bottom: 30px;
+  font-size: 1.4rem;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.1); }
+  .Measured-container .headTable {
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: bold;
+    padding: 2.5px 0;
+    color: white;
+    background-color: #861818; }
+    .Measured-container .headTable:not(:last-child) {
+      border-right: thin solid white; }
+  .Measured-container .detailTable {
+    text-align: center;
+    padding: 4px 0; }
+    .Measured-container .detailTable:not(:last-child) {
+      border-right: thin solid #861818; }
 
 .btn-download {
-  font-size: 16px;
-  background-color: orangered;
-  border: none;
-  text-align: center;
-  border-radius: 10px;
-  width: inherit;
-  height: inherit;
-  padding: 10px; }
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px; }
+  .btn-download button {
+    font-size: 16px;
+    background-color: #861818;
+    color: white;
+    border: none;
+    text-align: center;
+    border-radius: 10px;
+    width: inherit;
+    height: inherit;
+    padding: 10px;
+    width: 50%;
+    transition: all .1s; }
+    .btn-download button:hover {
+      background-color: #a74242;
+      transition: all .1s; }
 
 .form-control {
   width: 50%; }
