--- a/src/scss/_patient.scss
+++ b/src/scss/_patient.scss
@@ -15,9 +15,10 @@
     background-color: $color-1;
     border-left: thin solid white;
   }
-
-  .tableDetail{
+  .tableListColor{
     background-color: rgba(0,0,0,0.1);
+  }
+  .tableList{
     border-bottom: thin solid white;
     border-left: thin solid white;
     padding-top: 5px;
