--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -15,8 +15,13 @@
 }
 
 @keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+    0% {opacity: 0;display: none;}
+    100% {opacity: 1;display: block;}
+}
+
+@keyframes fadeOut {
+    0% {opacity: 1;display: block;}
+    100% {opacity: 0;display: none;}
 }
 
 @keyframes IconRotateY {
