--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,10 +1,14 @@
+.secondText-main{
+    display: flex;
+    justify-content: center;
+}
 .homeHeadText {
     margin: 5px 0 40px 0 ;
     & .firstText{
-        margin: 20px 0;
+        margin-top: 20px;
         text-align: center;
         & h1{
-            font-size: 4rem;
+            font-size: 2.5rem;
             color: $color-1;
             font-weight: bold;
             user-select: none;
@@ -13,23 +17,22 @@
     & .secondText{
         text-align: center !important; 
         &-container{
-            margin: 0 20px;
-            position: relative !important;
+            margin: 20px 0;
+            width: 80%;
             background-color: $color-1;
             border-radius: 5px;
             box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
-            
             transition: all .5s ease-out;
             & a{
                 text-decoration: none;
                 & img{
-                    height: 350px;
+                    height: 400px;
                     width: 100%;
                     border-radius:5px 5px 0 0;
                 }
                 & .secondText-head{
                     position: absolute;
-                    top: 70%;
+                    top: 80%;
                     left: 50%;
                     transform: translateX(-50%);
                     opacity: 0;
@@ -42,7 +45,7 @@
                     font-size: 1.3rem;
                     margin: 15px 15px 0 15px;
                     padding: 0 10px 20px 10px;
-                    color: white;
+                    color: white; 
                 }
             }
 
@@ -51,7 +54,7 @@
                 transform: scale(1.005) translateY(-2px);
                 transition: all .5s ease-out;
                 & .secondText-head{
-                    top: 65%;
+                    top: 70%;
                     opacity: 1;
                     transition: all .5s ease-out;
                 }
@@ -60,10 +63,88 @@
 
         &:hover{
             & .secondText-container{
-                margin: 0 30px;
                 transition: all .5s ease-out;
             }
         }
     }
+    & .lastText{
+        text-align: center;
+        color: $color-1;
+        padding: 5px;
+        margin-bottom: 0px;
+        & h2{margin-bottom: 10px;}
+        & p{font-size: 1.3rem;}
+    }
+}
 
+@include respond(md){
+    .homeHeadText {
+        & .firstText{
+            & h1{
+                font-size: 4rem;
+            }
+        }
+        & .secondText{
+            &-container{
+                margin: 0 10px;
+                & a{
+                    & img{
+                        height: 230px;
+                        width: 100%;
+                    }
+                    & .secondText-head{
+                        top: 55%;
+                    }
+                    & p{
+                        font-size: 1.3rem;
+                    }
+                }
+                &:hover {
+                    & .secondText-head{
+                        top: 50%;
+                    }
+                }
+            }
+
+        }
+        & .lastText{
+            margin-bottom: 20px;
+            & h2{font-size: 2.5rem;}
+            & p{font-size: 1.5rem;}
+        }
+    }
+}
+
+@include respond(lg){
+    .homeHeadText {
+        & .firstText{
+            & h1{
+                font-size: 4rem;
+            }
+        }
+        & .secondText{
+            &-container{
+                & a{
+                    & img{
+                        height: 360px;
+                        width: 100%;
+                    }
+                    & .secondText-head{
+                        top: 70%;
+                        font-size: 3rem;
+                    }
+                    & p{
+                        font-size: 1.3rem;
+                    }
+                }
+
+                &:hover {
+                    & .secondText-head{
+                        top: 65%;
+                    }
+                }
+            }
+        }
+    }
+    
 }
