--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,5 +1,5 @@
 .contain-login {
-    background-image: url('./images/LoginBG.png');
+    background-color: white;
     position: absolute;
     top: 0;
     left: 0;
@@ -9,13 +9,9 @@
     z-index: 10;
 
     & .contain {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
         background-color: white;
-        box-shadow: 1px 1px 8px 2px rgb(70, 70, 70);
-        min-height: 50vh;
+        width: 100%;
+        height: 100%;
 
         & .overlay-info {
             background-color: $color-1;
@@ -78,34 +74,15 @@
 
         & .overlay-form {
             padding: 2rem 1rem;
-            position: relative;
-
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
             & h1{
                 margin-bottom: 10px;
                 text-align: center;
                 color: $color-1;
-            }
-            &-1{
-                position: absolute;
-                top: 0;
-                left: 0;
-
-                &-active{
-                    animation: overlayform-1toLeft 1s;
-                }
-                &-disable{
-                    animation: overlayform-1toRight 1s;
-                }
-
-            }
-
-            &-2{
-                &-active{
-                    animation: overlayformSlidetoLeft 1s;
-                }
-                &-disable{
-                    animation: overlayformSlidetoRight 1s;
-                }
             }
 
             & .text-label{
@@ -117,9 +94,10 @@
             }
 
             & .button-group{
-                margin-top: 20% !important;
+                margin-top: 10% !important;
 
                 & button{
+                    font-size: 1.4rem !important;
                     background-color: $color-1;
                     color: white;
                     letter-spacing: .2rem;
@@ -144,9 +122,117 @@
 
 }
 
-#signIn {
-    background-color: blueviolet;
-    & .contain-2 {
+.hidden{
+    display: none;
+}
+
+.switch{
+    &-active{
+        animation: fadeIn .5s;
         display: block;
+    }
+    &-unactive{
+        animation: fadeOut .5s;
+        display: none;
+    }
+}
+
+.switchLoginBtn{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    background-color: $color-1;
+    padding: 10px 0;
+    border-radius: 5px;
+    & a{
+        &:hover{text-decoration: none;}
+    }
+    & .switchButton{
+        box-shadow: 0 0px 3px 1px rgba(0,0,0,0.3);
+        margin: 0 20px;
+        padding: 14px 8px;
+        border-radius: 50%;
+        background-color: white;
+        color: $color-1;
+        user-select: none;
+        cursor: pointer;
+    }
+}
+
+
+@include respond(md){
+    .contain-login{
+        background-image: url('./images/LoginBG.png');
+        & .contain{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            box-shadow: 1px 1px 8px 2px rgb(70, 70, 70);
+            border-radius: 5px;
+            min-height: 50vh;
+            width: 65%;
+            height: auto;
+            & .overlay-form{
+                position: relative;
+                top: 0%;
+                left: 0%;
+                transform: translate(0%,0%);
+                width: 100%;
+                & .button-group{
+                    margin-top: 15% !important;
+                }
+            }
+        }
+        & .switchLoginBtn{
+            margin-bottom: 20px;
+        }
+    }
+    
+
+}
+
+@include respond(lg){
+    .contain-login{
+        & .contain{
+            width: 60%;
+            & .overlay-form{
+                &-1{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    &-active{
+                        animation: overlayform-1toLeft 1s;
+                    }
+                    &-disable{
+                        animation: overlayform-1toRight 1s;
+                    }
+                }
+                &-2{
+                    &-active{
+                        animation: overlayformSlidetoLeft 1s;
+                    }
+                    &-disable{
+                        animation: overlayformSlidetoRight 1s;
+                    }
+                }
+                & .button-group{
+                    margin-top: 20% !important;
+                }
+            }
+        }
+        .hidden{display: block;}
+        .switch{
+            &-active{
+                display: block;
+                animation: none;
+            }
+            &-unactive{
+                display: block;
+                animation: none;
+            }
+        }
+        .switchLoginBtn{display: none;}
+        .switchButton{display: none;}
     }
 }
