--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -1,73 +1,77 @@
+#mobileMenuOut{
+    display: block;
+}
+#mobileDisable{
+    display: none;
+}
+#refresh{
+    display: none;
+}
+.ContainerHeader{
+    position: relative;
+}
 .navbar {
-    background-color: $color-1 ;
-
+    display: none;
     &-brand {
-        text-align: center !important;
+        display: none;
 
         & .logo-content {
-            background-color: $white;
-            width: 8rem; 
-            height: 8rem;
-            position: relative;
-            border-radius: 50%;
-
-            & img {
-                width: 12rem;
-                height: 10rem;
-                padding: 1.5rem;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-            }
+            display: none;
         }
     }
-
-    &-toggler {
-        & .logo-content {
-            background-color: $white; 
-            width: 9rem; 
-            height: 9rem;
-            position: relative;
-            border-radius: 50%;
-
-            & img {
-                width: 10rem;
-                height: 8rem;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-            }
+    &.menubarToggleBtn{
+        display: block;
+        z-index: 15;
+    }
+    & .bars{
+        font-size: 5rem;
+        background-color: $color-2;
+        border-radius: 50%;
+        z-index: 12;
+        padding: 13px;
+        position: fixed;
+        top: 4%;
+        right: 4%;
+        color: white;
+        cursor: pointer;
+        box-shadow: 0 0 4px 2px rgba(0,0,0,0.3);
+        transition: all .2s;
+        &:hover {
+            transform: scale(1.1);
+            transition: all .2s;
+            box-shadow: 0 0 3px 1px rgba(0,0,0,0.2);
         }
     }
-
     &-nav {
-        margin-left: auto;
-        margin-right: 5rem;
-        animation: navbarSlideUp 1s ;
-    
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 11;
+        background-color: $color-1;
+        width: 100%;
+        height: 100%;
+        padding-top: 10%;
+        animation: Menubar .5s;
         & .nav-item {
-            margin-left: 2rem;
-            font-size: 1.7rem;
+            background-color: $color-2;
+            margin: 5px 100px;
+            text-align: center;
+            font-size: 1.4rem;
             font-weight: bold;
-            padding: 0;
             border-radius: 1rem;
-
+            transition: all .3s;
             & .nav-link {
                 padding: 3rem 2rem !important;
                 color: $white;
                 cursor: pointer;
                 user-select: none;
             }
-
             &:hover {
                 background-color: $white;
                 transition: all .3s;
                 & .nav-link {
-                    color: $color-1;
+                    color: $color-1 !important;
                     text-shadow: 1px 1px 2px $color-2;
-
                 }
             }
         }
@@ -75,3 +79,53 @@
 }
 
 
+@include respond(md){
+    .ContainerHeader{z-index: 9;}
+    .navbar{
+        background-color: $color-1 ;
+        &-brand {
+            text-align: center !important;
+            display: block;
+    
+            & .logo-content {
+                display: block;
+                background-color: $white;
+                width: 8rem; 
+                height: 8rem;
+                position: relative;
+                border-radius: 50%;
+    
+                & img {
+                    width: 12rem;
+                    height: 10rem;
+                    padding: 1.5rem;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                }
+            }
+        }
+        & .menubarToggleBtn{
+            display: none;
+        }
+        &-nav{
+            position: relative;
+            margin: 0 5rem 0 auto;
+            padding-top: 0;
+            width: auto;
+            height: auto;
+            animation: none;
+            & .nav-item{
+                margin: 0 0 0 2rem;
+                text-align: start;
+                padding: 0;
+                font-size: 1.7rem;
+                background-color: $color-1;
+                & a{
+                    animation: navbarSlideUp .5s;
+                }
+            }
+        }
+    }
+}
