--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -85,3 +85,13 @@
     50%{transform: rotateX(-70deg);}
     100%{transform: rotateX(0deg);}
 }
+
+@keyframes Menubar{
+    0%{opacity: 0;width: 0;height: 0;}
+    100%{opacity: 1;width: 100%;height: 100%;}
+}
+
+@keyframes refreshMenubar{
+    0%{display: block;opacity:1;width: 100%;height: 100%;}
+    100%{display: none;opacity: 0;width: 0;height: 0;}
+}
